--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Guillaume Subiron"
-subtitle: "Administration système"
+subtitle: "Administrateur système"
 extends: standard.j2
 default_block: None
 ---
@@ -22,13 +22,19 @@ default_block: None
 #}
 
 <ul class="nav nav-tabs">
-  <li class="active"><a href="#skills" data-toggle="tab">Compétences</a>
+  <li class="active"><a href="#me" data-toggle="tab">Qui suis-je ?</a>
+  <li><a href="#skills" data-toggle="tab">Compétences</a>
   <li><a href="#references" data-toggle="tab">Expériences</a>
+  <li><a href="#studies" data-toggle="tab">Études</a>
+  <li><a href="#projects" data-toggle="tab">Projets</a>
 </ul>
 
 <div class="tab-content">
 
-  <div class="tab-pane active" id="skills">
+  <div class="tab-pane fade in active" id="me">
+  </div>
+
+  <div class="tab-pane fade" id="skills">
     <h2>Compétences</h2>
     
     <h3>Programmation</h3>
@@ -49,7 +55,7 @@ default_block: None
 
   </div>
 
-  <div class="tab-pane" id="references">
+  <div class="tab-pane fade" id="references">
     <h2>Expériences professionnelles</h2>
     
     <h3>Informatique</h3>
@@ -96,6 +102,14 @@ default_block: None
         </td>
       </tr>
     </table>
+  </div>
+
+  <div class="tab-pane fade" id="studies">
+    <h2>Études</h2>
+  </div>
+
+  <div class="tab-pane fade" id="projects">
+    <h2>Projets</h2>
   </div>
 </div>
 
