--- a/content/index.html
+++ b/content/index.html
@@ -32,6 +32,25 @@ default_block: None
 <div class="tab-content">
 
   <div class="tab-pane fade in active" id="me">
+    <div class="row-fluid">
+      <div class="span4 offset1">
+        <img class="img-polaroid" src="/media/img/vcard.png" alt="VCard QRCode">
+      </div>
+      <div class="span6">
+        <h3>VCard</h3>
+        <address>
+          <a href="/contact"><script type="text/javascript">document.write("guillaume" + "@" + "subiron.org")</script></a><br>
+          guillaume@im.subiron.org<br>
+          <a href="http://www.subiron.org/">http://www.subiron.org/</a><br>
+        </address>
+        <hr>
+        <address>
+          +336.69.21.53.62<br>
+          1, rue du Docteur Guttierez<br>
+          64200 Biarritz<br>
+        </address>
+      </div>
+    </div>
   </div>
 
   <div class="tab-pane fade" id="skills">
