--- a/content/index.html
+++ b/content/index.html
@@ -75,7 +75,7 @@ default_block: None
       <dt>VPN<dd>OpenVPN
     </dl>
     
-    <h3>Outils <small>- utilisation et administration</small></h3>
+    <h3>Outils <small> (utilisation et administration)</small></h3>
 
     <dl class="dl-horizontal">
       <dt>Gestion des sources<dd>Git, Subversion
