--- a/content/index.html
+++ b/content/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Guillaume Subiron"
+title: "Guillaume Subiron - maethor"
 subtitle: "Administrateur système"
 extends: standard.j2
 default_block: None
