--- a/content/contact.html
+++ b/content/contact.html
@@ -6,8 +6,14 @@ default_block: None
 
 {% block main %}
 
+<p>Je suis présent et disponible pour discuter :</p>
+<ul>
+  <li>sur IRC : <strong>maethor</strong> sur <strong>freenode</strong> et <strong>geeknode</strong>
+  <li>sur Jabber/XMPP : <strong>maethor@im.subiron.org</strong>
+</ul>
+
 <p>
-  Vous pouvez me contacter <a href="mailto:maethor@subiron.org">directement par email</a> ou en utilisant ce formulaire.
+  Vous pouvez me contacter <a href="mailto:maethor+www@subiron.org">directement par email</a> ou en utilisant ce formulaire.
 </p>
 <form name="contact" class="form-horizontal">
   <div class="control-group">
