--- a/content/index.html
+++ b/content/index.html
@@ -26,7 +26,7 @@ default_block: None
         <h3>VCard</h3>
         <address>
           <a href="/contact"><script type="text/javascript">document.write("guillaume" + "@" + "subiron.org")</script></a><br>
-          guillaume@im.subiron.org<br>
+          maethor@im.subiron.org<br>
           <a href="http://www.subiron.org/">http://www.subiron.org/</a><br>
         </address>
         <hr>
