--- a/content/index.html
+++ b/content/index.html
@@ -102,10 +102,11 @@ default_block: None
     
     <table class="table">
       <tr>
-        <td><span class="label label-info">Avril - Septembre 2013</span></td>
+        <td><span class="label label-info">Avril - Août 2013</span></td>
         <td><strong>Administrateur Système et Développeur Web</strong>(HTML, PHP, CSS, JQuery, Ajax, symfony, Elgg) / Stagiaire chez <a href="#">Bluelogic (Bidart, 64)</a>
           <ul>
-            <li>Mise en place d'une architecture de type "cloud" pour un site web réseau social.
+            <li>Participation à la mise en place d'une architecture de type "cloud" pour un site web réseau social.
+            <li>Mise en place de sauvegardes.
             <li>Développement de modules pour divers CMS (prestashop) et framework (symfony 1.2, Elgg).
           </ul>
         </td>
