--- a/content/index.html
+++ b/content/index.html
@@ -102,8 +102,17 @@ default_block: None
     
     <table class="table">
       <tr>
-        <td><span class="label label-info">Avril - Août 2013</span></td>
-        <td><strong>Administrateur Système et Développeur Web</strong>(HTML, PHP, CSS, JQuery, Ajax, symfony, Elgg) / Stagiaire chez <a href="#">Bluelogic (Bidart, 64)</a>
+        <td><span class="label label-info">Depuis Août 2013</span></td>
+        <td><strong>Administrateur Système</strong> chez <a href="#">Sysnove (Biarritz, 64)</a>
+          <ul>
+            <li>Mise en place et administration d'une infrastructure OpenStack.
+          </ul>
+        </td>
+      </tr>
+
+      <tr>
+        <td><span class="label label-inverse">Avril - Août 2013</span></td>
+        <td><strong>Administrateur Système et Développeur Web</strong> (HTML, PHP, CSS, JQuery, Ajax, symfony, Elgg) / Stagiaire chez <a href="#">Bluelogic (Bidart, 64)</a>
           <ul>
             <li>Participation à la mise en place d'une architecture de type "cloud" pour un site web réseau social.
             <li>Mise en place de sauvegardes.
@@ -114,7 +123,7 @@ default_block: None
     
       <tr class="inactive">
         <td><span class="label label-inverse">Avril - Juin 2010</span></td>
-        <td><strong>Développeur Web</strong> (HTML, PHP, CSS) <strong>et Système</strong>(shellscript, Perl) / Stagiaire chez <a href="#">Les Développements Durables (Bayonne, 64)</a>
+        <td><strong>Développeur Web</strong> (HTML, PHP, CSS) <strong>et Système</strong> (shellscript, Perl) / Stagiaire chez <a href="#">Les Développements Durables (Bayonne, 64)</a>
           <p>Développement d'une interface web à destination d'utilisateurs non-techniciens pour permettre l'administration de serveurs Tranquilinux (GNU/Linux Debian).</p>
       </tr>
     </table>
