--- a/content/index.html
+++ b/content/index.html
@@ -46,7 +46,7 @@ default_block: None
     
     <dl class="dl-horizontal">
       <dt>C++<dd>QtCode, QtGui, QtXML, Tulip
-      <dt>C<dd>Programmation système, multi-cœurs - <em>bases</em>
+      <dt>C<dd>Programmation système, réseau - <em>bases</em>
       <dt>Java<dd>Fichiers, sockets, threads, Swing, patterns - <em>bonnes bases</em>
       <dt>Scripts<dd>Schellscript, Python
       <dt>Balises et associés<dd>HTML5 et CSS3, Bootstrap - <em>maitrisés</em>
@@ -72,6 +72,7 @@ default_block: None
         <li>XMPP, FTP, etc.
       </ul>
       <dt>Monitoring<dd>Shinken, Nagios (via SNMP et NRPE)
+      <dt>Déploiements automatisés<dd>Ansible
       <dt>VPN<dd>OpenVPN
     </dl>
     
