--- a/content/index.html
+++ b/content/index.html
@@ -104,8 +104,9 @@ default_block: None
     <table class="table">
       <tr>
         <td><span class="label label-info">Depuis Août 2013</span></td>
-        <td><strong>Administrateur Système</strong> chez <a href="http://www.sysnove.fr/">Sysnove (Biarritz, 64)</a>
+        <td><strong>Co-Gérant et Administrateur Système</strong> chez <a href="http://www.sysnove.fr/">Sysnove (Biarritz, 64)</a>
           <ul>
+            <li>Déploiement automatisé d'infrastructure avec Ansible.
             <li>Mise en place et administration d'une infrastructure OpenStack.
           </ul>
         </td>
